-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.0
-
None
-
-
b58876c296 (qt/qtbase/dev) b58876c296 (qt/tqtc-qtbase/dev) 16dd73de24 (qt/tqtc-qtbase/6.2) bc9b03a43b (qt/qtbase/6.4) bc9b03a43b (qt/tqtc-qtbase/6.4)
Description:
When a QComboBox is editable, some assistive technologies (in my example NVDA screenreader) can't interact with QLineEdit in QComboBox, because Qt don't expose this to screenreader correctly.
Here is an explanation from NVDA dev:
"When the combo box gets focus, QT needs to fire focus on the inner QLINEEdit widget. so that ATs understand that it is the edit field that is being interacted with, not the combo box.
However, it will be important that the focus event for the QLINEEdit be fired after (or instead of) the focus event for the combobox, otherwise if the events appeared in the cincorrect order, the AT would still think that the final focus was on the combo box."
Expected behavior:
Qt should inform screenreader about the presence of QLineEdit in QComboBox, like NVDA devs explains.
- resulted in
-
QTBUG-109763 tst_QAccessibility::focusChild() with QtWayland failed on Ubuntu 22.04, GNOME
-
- Closed
-
| For Gerrit Dashboard: QTBUG-107572 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 441924,3 | Windows: Inform accessibility system about the focused child item | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 442785,2 | Windows: Inform accessibility system about the focused child item | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 442790,2 | Windows: Inform accessibility system about the focused child item | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |